# content-to-html

./: .dockerignore  .gitignore  README.md  musicList.yaml  projDB.yaml  runBootstrapDemo.sh  runDemo.sh  sgHomePage.cabal
app/: GetConfig.hs  Main.hs
bootstrapDemo/: attributes_cfg.yaml  website_cfg.yaml
bootstrapDemo/config/: attributes.yaml
bootstrapDemo/css/: style.css
content/: 0_infos.yaml  1_myMusic.yaml  2_programming.yaml
css/: style.css
demo/: content.yaml  projDB.yaml  websiteConfig.yaml  website_cfg.yaml
demo/config/: content.yaml  form.yaml  projDB.yaml
demo/content/: 0_infos.yaml  1_music.yaml  2_1_subTopic.yaml  2_2_subTopic.yaml
demo/css/: style.css
examples/bootstrapDemo/: run.sh
examples/bootstrapDemo/config/: attributes.yaml  website.yaml
examples/bootstrapDemo/css/: style.css
examples/demo/: run.sh
examples/demo/config/: attributes.yaml  form.yaml  website.yaml
examples/demo/content/: 0_infos.yaml  1_music.yaml  2_1_subTopic.yaml  2_2_subTopic.yaml
examples/demo/css/: style.css
production_build/: build.sh  upload.sh
src/: CMS.hs  ContentAndRoutes.hs  Html.hs  Lib.hs  MusicList.hs  Plugins.hs  ProjDB.hs  RenderPage.hs  Routes.hs  RoutesMonad.hs  Types.hs  Utils.hs  WebDocumentStructure.hs
src/CMS/: JSONOptions.hs  ToHtml.hs  Types.hs
src/MusicList/: Html.hs  Types.hs
src/Plugins/: Form.hs  HierarchicWebsite.hs  ProjDB.hs
src/Plugins/HierarchicWebsite/: Types.hs
src/Plugins/ProjDB/: DB.hs  ToWebDoc.hs  Types.hs
src/ProjDB/: Html.hs  ToWebDoc.hs  Types.hs
src/Types/: Resource.hs  URI.hs  WebDocument.hs
src/Types/WebDocument/: AttributesConfig.hs  ToHtml.hs
src/Utils/: JSONOptions.hs  Lens.hs  Yaml.hs
src/WebDocumentStructure/: JSONOptions.hs  ToHtml.hs  Types.hs
