name:                sgHomePage
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
--homepage:            https://github.com/githubuser/sgHomePage#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:
    base >= 4.7 && < 5,
    Spock == 0.10.*
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N

executable sgHomePage-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sgHomePage
  default-language:    Haskell2010

test-suite sgHomePage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sgHomePage
  ghc-options:         -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

--source-repository head
--  type:     git
--  location: https://github.com/githubuser/sgHomePage
