name:                sgHomePage
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
--homepage:            https://github.com/githubuser/sgHomePage#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:
    Types.URI,
    Utils.Yaml, Utils.JSONOptions,
    Plugins,
    Plugins.ProjDB,
    Plugins.ProjDB.ToWebDoc, Plugins.ProjDB.Types, Plugins.ProjDB.DB,
    Plugins.HierarchicWebsite, Plugins.HierarchicWebsite.Types,
    Plugins.Form,
    Types.Resource,
    Types.WebDocument, Types.WebDocument.ToHtml, Types.WebDocument.AttributesConfig
  build-depends:
    base >= 4.7 && < 5,
    Spock == 0.10.*,
    lucid == 2.9.5.*,
    text == 1.2.2.*,
    yaml == 0.8.18.*,
    smtp-mail,
    filepath == 1.4.0.*,
    mtl == 2.2.*,
    transformers == 0.4.2.*,
    stm ==  2.4.4.*,
    directory == 1.2.2.*,
    containers == 0.5.6.*,
    aeson == 0.11.2.*,
    microlens-platform == 0.3.6.*,
    template-haskell == 2.10.0.*,
    unordered-containers,
    vector,
    -- for some reason in some cases stack throws an error
    -- if these libraries are not added here
    -- even though they are just INDIRECT dependencies (it's so dumb !):
    aeson, aeson-pretty, hex
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N

executable sgHomePage-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules: GetConfig
  build-depends:
    base,
    sgHomePage,
    optparse-applicative == 0.12.*,
    containers == 0.5.6.*,
    mtl
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  -- ld-options: -static

test-suite sgHomePage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sgHomePage
  ghc-options:         -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

--source-repository head
--  type:     git
--  location: https://github.com/githubuser/sgHomePage
